--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 :root {
-  --primary-color: blue;
+  --primary-color: #0a0a0a;
+  font-size: 100vw;
 }
 
 body {
   margin: 0;
+  font-size: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -20,4 +22,5 @@ html,body,#root {
 
 a {
   text-decoration: none;
+  color: var(--primary-color);
 }
